# netops-toolkit-app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
.github/: copilot-setup-steps.yml
.github/workflows/: ci.yml
docs/: ROADMAP.md
scripts/: setup-python.cmd  setup-python.mjs  setup-python.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/partitions/: commands.rs
src/lib/: types.ts
src/lib/components/: AppShell.svelte  ExportButton.svelte
src/lib/data/: mock-bgp.ts  mock-change.ts  mock-vault.ts  mock-vlan.ts
src/lib/design-dojo/: Badge.svelte  Button.svelte  Pane.svelte  SearchInput.svelte  SplitPane.svelte  StatusBar.svelte  StatusBarItem.svelte  StatusBarSpacer.svelte  Table.svelte  index.ts  useTui.ts
src/lib/services/: bgp.ts  change.ts  export.ts  health.ts  license-service.ts  partition-service.ts  vault.ts  vlan.ts
src/lib/stores/: license.svelte.ts  partition-store.svelte.ts  settings.svelte.ts  tui.ts  yaml-settings.svelte.ts
src/lib/types/: bgp.types.ts  change.types.ts  vault.types.ts  vlan.types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/ansible/: +page.svelte
src/routes/bgp/: +page.svelte
src/routes/changes/: +page.svelte
src/routes/config/: +page.svelte
src/routes/health/: +page.svelte
src/routes/inventory/: +page.svelte
src/routes/license/: +page.svelte
src/routes/scan/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/terminal/: +page.svelte
(+16 files in other folders)
