[package]
name = "netops-toolkit-app"
version = "0.1.0"
edition = "2021"
description = "Network operations toolkit desktop application"
authors = ["Plures"]
license = "AGPL-3.0"

[lib]
name = "netops_toolkit_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "netops-toolkit-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
